<resources>
    <string name="app_name">Trovami</string>

    <!--    GENERAL-->
    <string name="regresar">Regresar</string>
    <string name="atras">Atras</string>

    <!--    ALERTAS LO TOME-->
    <string name="alertasLoTome_titulo">Alertas \"Lo Tomé\"</string>
    <string name="alertasLoTome_visionGeneral">VISIÓN GENERAL</string>
    <string name="alertasLoTome_descripcion1">Existe un boton \"Lo Tome\" como el siguiente en cada resultado en la busqueda de objetos</string>
    <string name="alertasLoTome_descripcion2">Este alertas se reciben periodicamente, usted escoge cada cuanto tiempo quiere recibirlas.</string>
    <string name="alertasLoTome_descripcion3">Este tipo de alertas le ayudan a recordar poner los objetos en el lugar donde los encontro.</string>
    <string name="alertasLoTome_descripcion4">No dejara de recibirlas hasta que usted marque el objeto como colocado. Esto lo ayuda a colocarlo en el lugar donde debe ir.</string>


    <!--    EDITAR OBJETO-->
    <string name="editarObjeto_Titulo">Añadir objeto</string>
    <string name="editarObjeto_Subtitulo">Edita la información del objeto.</string>
    <string name="editarObjeto_Nombre">NOMBRE</string>
    <string name="editarObjeto_Ubicacion">UBICACIÓN</string>
    <string name="editarObjeto_LugarEstanteria">ESTANTERÍA</string>

    <string name="img">img</string>
    <string name="configurar_alertas">Configurar alertas</string>
    <string name="frecuencia_de_alertas">FRECUENCIA DE ALERTAS</string>
    <string name="cada_5_min">Cada 5 min</string>
    <string name="cada_10_min">Cada 10 min</string>
    <string name="cada_30_min">Cada 30 min</string>
    <string name="cada_1_hora">Cada 1 hora</string>
    <string name="cada_2_horas">Cada 2 horas</string>
    <string name="cada_3_horas">Cada 3 horas</string>
    <string name="guardar">GUARDAR</string>
    <string name="tipo_de_usuario_title">Tipo de Usuario</string>
    <string name="tipo_de_usuario_subtitle">¿Lo usará de forma individual o \n forma parte de un grupo u organización?</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="nombre_de_usuario">NOMBRE DE USUARIO</string>
    <string name="contrase_a">CONTRASEÑA</string>
    <string name="olvid_mi_contrase_a">Olvidé mi contraseña</string>
    <string name="recu_rdame">Recuérdame</string>
    <string name="crear_cuenta">CREAR CUENTA</string>
    <string name="iniciar_sesi_btn">INICIAR SESIÓN</string>
    <string name="acerca_de">Acerca De</string>
    <string name="es_una_app_n_desarrollada_por">ES UNA APP   DESARROLLADA POR</string>
    <string name="ajustes">Ajustes</string>
    <string name="cuenta">CUENTA</string>
    <string name="usuario">USUARIO</string>
    <string name="editar_nombres">Editar Nombres</string>
    <string name="editar_contrase_a">Editar Contraseña</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="informaci_n_adicional">INFORMACIÓN ADICIONAL</string>
    <string name="acerca_de_la_app">Acerca de la App</string>
    <string name="salir_de_la_app">Salir de la App</string>
    <string name="ajustes2">Ajustes</string>
    <string name="editar_contrase_a1">Editar Contraseña</string>
    <string name="datos_actuales">DATOS ACTUALES</string>
    <string name="nombre_completo">NOMBRE COMPLETO</string>
    <string name="modificar_contrase_a">MODIFICAR CONTRASEÑA</string>
    <string name="contrase_a_actual">Contraseña actual</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="confirme_la_nueva_contrase_a">Confirme la nueva contraseña</string>
    <string name="guardar2">GUARDAR</string>
    <string name="ajustes3">Ajustes</string>
    <string name="editar_nombres3">Editar Nombres</string>
    <string name="datos_actuales1">DATOS ACTUALES</string>
    <string name="nombredeusuario">nombredeusuario</string>
    <string name="modificar_nombres">MODIFICAR NOMBRES</string>
    <string name="nombres">Nombres</string>
    <string name="nuevo_nombre_completo">Nuevo nombre completo</string>
    <string name="nuevo_nombre_de_usuario">Nuevo nombre de usuario</string>
    <string name="contrase_a1">Contraseña</string>
    <string name="escribe_la_contrase_a_para_guardar">Escribe la contraseña para guardar</string>
    <string name="guardar3">GUARDAR</string>
    <string name="bienvenido_de_nuevo">Bienvenido de nuevo</string>
    <string name="bienvenids">Ahora está en el inicio.\nPara buscar objetos, toque la lupa.\nPara editar objetos, toque el lápiz.\nPara ver los ajustes, toque en ícono de engranaje.</string>
    <string name="nombre_del_objeto">Nombre del objeto</string>
    <string name="ubicaci_n_sea_muy_descriptivo">Ubicación (sea muy descriptivo)</string>
    <string name="lugar_en_estanter_a_opcional">Lugar en estantería (opcional)</string>
    <string name="escoger_foto">ESCOGER FOTO</string>
    <string name="tomar_foto">TOMAR FOTO</string>
    <string name="guardar7">GUARDAR</string>
    <string name="le_damos_la_bienvenida">Le damos la bienvenida</string>
    <string name="conozca_lo_que_esta_app_puede_hacer">Conozca lo que esta app puede hacer.</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="organizaci_n_eficiente">Organización Eficiente</string>
    <string name="mant_n_un_inventario_visual_de_tus_pertenencias_con_fotos_nombres_y_ubicaciones_nunca_pierdas_de_vista_tus_objetos_importantes">Mantén un inventario visual de tus pertenencias con fotos, nombres y ubicaciones. Nunca pierdas de vista tus objetos importantes.</string>
    <string name="regresar3">REGRESAR</string>
    <string name="siguiente3">SIGUIENTE</string>
    <string name="b_squeda_instant_nea">Búsqueda Instantánea</string>
    <string name="encuentra_tus_objetos_en_segundos_busca_por_nombre_o_navega_por_las_im_genes_para_recordar_d_nde_los_guardaste">Encuentra tus objetos en segundos. Busca por nombre o navega por las imágenes para recordar dónde los guardaste.</string>
    <string name="regresar5">REGRESAR</string>
    <string name="siguiente6">SIGUIENTE</string>
    <string name="ahorro_de_tiempo">Ahorro de Tiempo</string>
    <string name="cosas">Dile adiós a la frustración de buscar. Con nuestra app, ubicar tus cosas será rápido y sin estrés.</string>
    <string name="rege">REGRESAR</string>
    <string name="next">SIGUIENTE</string>
    <string name="registrarse">Registrarse</string>
    <string name="nombre_personal">NOMBRE PERSONAL</string>
    <string name="escribe_tu_nombre_completo">Escribe tu nombre completo</string>
    <string name="bac">REGRESAR</string>
    <string name="siguiente4">SIGUIENTE</string>
    <string name="registrarse6">Registrarse</string>
    <string name="username">NOMBRE DE USUARIO</string>
    <string name="escriba_un_usuario_sin_espacios">Escriba un usuario sin espacios</string>
    <string name="contrase_aan">CONTRASEÑA</string>
    <string name="escriba_una_contrase_a">Escriba una contraseña</string>
    <string name="segr">Se recomienda una contraseña segura y fácil de recordar.</string>
    <string name="re">REGRESAR</string>
    <string name="crear_cuenta3">CREAR CUENTA</string>
    <string name="boton_inicio">Inicio</string>
    <string name="boton_buscar">Buscar</string>
    <string name="boton_agregar">Agregar</string>
    <string name="boton_ajustes">Ajustes</string>
    <string name="hint_buscar_objeto">Ingrese el nombre del objeto</string>
    <string name="texto_boton_todos">Todos</string>
    <string name="texto_ubicacion">Ubicación: </string>
    <string name="texto_estante">Estanteria: </string>
    <string name="texto_boton_eliminar">Eliminar</string>
    <string name="texto_boton_lo_devol">Devolver</string>
    <string name="texto_boton_lo_tome">Lo Tomé</string>


</resources>