 <?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/trovami_background"
    android:padding="20dp"
    tools:context=".Alertas_lo_tome">


    <TextView
        android:id="@+id/tvAlertas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/inter_semibold_style"
        android:text="@string/alertasLoTome_titulo"
        android:textAlignment="center"
        android:textColor="@color/trovami_textGray"
        android:textSize="@dimen/font_size_huge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/inter_regular_style"
        android:text="@string/alertasLoTome_descripcion2"
        android:textColor="@color/trovami_textGray"
        android:textSize="@dimen/font_size_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/inter_regular_style"
        android:text="@string/alertasLoTome_descripcion1"
        android:textSize="@dimen/font_size_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVisionGeneral" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/inter_regular_style"
        android:text="@string/alertasLoTome_descripcion3"
        android:textColor="@color/trovami_textGray"
        android:textSize="@dimen/font_size_small"
        app:layout_constraintBottom_toTopOf="@+id/tv4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvVisionGeneral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/inter_regular_style"
        android:text="@string/alertasLoTome_visionGeneral"
        android:textColor="@color/trovami_textGray"
        android:textSize="@dimen/font_size_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.074"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAlertas" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:fontFamily="@font/inter_regular_style"
        android:text="@string/alertasLoTome_descripcion4"
        android:textColor="@color/trovami_textGray"
        android:textSize="@dimen/font_size_small"
        app:layout_constraintBottom_toTopOf="@+id/btnRegresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="135dp"
        android:layout_height="145dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/img"
        app:layout_constraintBottom_toTopOf="@+id/tv2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv1"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnRegresar"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginBottom="34dp"
        android:background="@drawable/trovami_btn"
        android:fontFamily="@font/inter_regular_style"
        android:text="@string/regresar"
        android:textColor="@color/trovami_textGray"
        android:textSize="@dimen/font_size_small"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>