<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/trovami_background"
    tools:context=".ConfigurarAlertas"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/tvConfigurarAlertas1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:fontFamily="@font/inter_semibold_style"
        android:text="@string/configurar_alertas"
        android:textAlignment="center"
        android:textColor="@color/trovami_textGray"
        android:textSize="@dimen/font_size_large"
        tools:layout_editor_absoluteX="109dp"
        tools:layout_editor_absoluteY="32dp" />

    <Button
        android:id="@+id/button15"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/ayuda_icon"
        tools:layout_editor_absoluteX="191dp"
        tools:layout_editor_absoluteY="72dp" />


    <TextView
        android:id="@+id/tvConfigurarAlertas2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_regular_style"
        android:text="@string/frecuencia_de_alertas"
        android:textColor="@color/trovami_textGray"
        android:textSize="@dimen/font_size_small"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="124dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/tvConfigurarAlertas2"
        tools:layout_editor_absoluteY="169dp">

        <!-- Left side RadioButtons -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/button1"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:background="@drawable/trovami_btn"
                android:fontFamily="@font/inter_regular_style"
                android:text="@string/cada_5_min"
                android:textColor="@color/trovami_textGray"
                android:textSize="@dimen/font_size_small" />

            <RadioButton
                android:id="@+id/button3"
                android:layout_width="125dp"
                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/trovami_btn"
                android:fontFamily="@font/inter_regular_style"
                android:text="@string/cada_30_min"
                android:textColor="@color/trovami_textGray" />

            <RadioButton
                android:id="@+id/button12"
                android:layout_width="125dp"
                android:layout_height="48dp"
                android:layout_marginTop="13dp"
                android:background="@drawable/trovami_btn"
                android:fontFamily="@font/inter_regular_style"
                android:text="@string/cada_2_horas"
                android:textColor="@color/trovami_textGray" />
        </LinearLayout>

        <!-- Right side RadioButtons -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/button9"
                android:layout_width="125dp"
                android:layout_height="50dp"
                android:background="@drawable/trovami_btn"
                android:fontFamily="@font/inter_regular_style"
                android:text="@string/cada_10_min"
                android:textColor="@color/trovami_textGray"
                android:textSize="@dimen/font_size_small" />

            <RadioButton
                android:id="@+id/button11"
                android:layout_width="125dp"
                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/trovami_btn"
                android:fontFamily="@font/inter_regular_style"
                android:text="@string/cada_1_hora"
                android:textColor="@color/trovami_textGray" />

            <RadioButton
                android:id="@+id/button13"
                android:layout_width="125dp"
                android:layout_height="48dp"
                android:layout_marginTop="13dp"
                android:background="@drawable/trovami_btn"
                android:fontFamily="@font/inter_regular_style"
                android:text="@string/cada_3_horas"
                android:textColor="@color/trovami_textGray" />
        </LinearLayout>
    </RadioGroup>


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_regular_style"
        android:text="SONIDO DE NOTIFICACIÓN"
        android:textColor="@color/trovami_textGray"
        android:textSize="@dimen/font_size_small"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="383dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="418dp">

        <RadioButton
            android:id="@+id/radButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="Descubrimiento"
            android:textColor="@color/RadioButton_textcolor"
            android:textSize="@dimen/font_size_small" />

        <RadioButton
            android:id="@+id/radButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="Girasol"
            android:textColor="@color/RadioButton_textcolor"
            android:textSize="@dimen/font_size_small" />


        <RadioButton
            android:id="@+id/radButton3"
            android:layout_width="217dp"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="Persianas"
            android:textColor="@color/RadioButton_textcolor"
            android:textSize="@dimen/font_size_small" />
    </RadioGroup>

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/trovami_btn"
        android:fontFamily="@font/inter_regular_style"
        android:text="@string/guardar"
        android:textColor="@color/trovami_textGray"
        android:textSize="@dimen/font_size_small"
        tools:layout_editor_absoluteX="161dp"
        tools:layout_editor_absoluteY="716dp" />

</androidx.constraintlayout.widget.ConstraintLayout>