<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/trovami_background"
    tools:context=".Registrarse1">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="56dp"
        android:src="@drawable/brand_trovami_lupa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/fredoka_semibold"
        android:text="Trovami"
        android:textColor="@color/trovami_textGreen"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />


    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:fontFamily="@font/inter_bold_style"
        android:text="@string/registrarse"
        android:textAlignment="center"
        android:textColor="@color/trovami_textGray"
        android:textSize="@dimen/font_size_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/tvAlertas5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/inter_regular_style"
        android:text="@string/nombre_personal"
        android:textColor="@color/trovami_textGray"
        android:textSize="@dimen/font_size_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/editTextText3"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginTop="9dp"
        android:fontFamily="@font/inter_regular_style"
        android:background="@drawable/trovami_edit_text_style"
        android:hint="@string/escribe_tu_nombre_completo"
        android:textColorHint="@color/trovami_textGray"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:textColor="@color/trovami_textGray"
        android:textSize="@dimen/font_size_smallMedium"
        app:layout_constraintStart_toStartOf="@+id/tvAlertas5"
        app:layout_constraintTop_toBottomOf="@+id/tvAlertas5" />

    <Button
        android:id="@+id/button4"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/trovami_btn"
        android:drawableLeft="@drawable/nav_siguiente_icon_style"
        android:fontFamily="@font/inter_regular_style"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:text="@string/siguiente4"
        android:textColor="@color/trovami_textGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="43dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/trovami_btn"
        android:drawableLeft="@drawable/nav_regresar_icon_style"
        android:fontFamily="@font/inter_regular_style"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:text="@string/bac"
        android:textColor="@color/trovami_textGray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>